@@ -29,3 +29,8 @@ DCT1D
 |   Compress | 125.6 ms |  4.76 ms | 0.26 ms | 500.0000 | 500.0000 | 500.0000 |  33.32 MB |
 | Uncompress | 163.4 ms | 21.05 ms | 1.15 ms | 500.0000 | 500.0000 | 500.0000 |  33.79 MB |
 
+Matrix Unsafe
+|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
+|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
+|   Compress | 52.56 ms | 2.339 ms | 0.128 ms | 800.0000 | 800.0000 | 800.0000 |  33.32 MB |
+| Uncompress | 72.38 ms | 4.032 ms | 0.221 ms | 714.2857 | 714.2857 | 714.2857 |  33.79 MB |
